[package]
name = "minim"
version = "0.1.0"
description = "A lightweight TUI music player"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.95"
cursive = { version = "0.21", features = ["toml"] }
cursive_table_view = "0.15"
dirs = "6.0.0"
lofty = "0.22.1"
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-all"] }
walkdir = "2.5.0"
